[package]
name = "rubes_world"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.0" }
bevy_dylib = { version = "0.16.0-rc.3" }
bevy-inspector-egui = "0.31.0"
bevy_rapier3d = { version = "0.30.0", features = ["enhanced-determinism", "debug-render-3d"] }
bevy_panorbit_camera = "0.26.0"
bevy_simple_text_input = "0.11.1"
transform-gizmo-bevy = "0.6.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[toolchain]
channel = "nightly"

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"
